fixed li alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,8 +106,9 @@ h1 {
   text-decoration: underline;
 }
 
-li {
-  list-style-position: outside;
+li:before {
+  margin-left: -25px;
+  padding-right: 10px;
 }
 
 @media only screen and (max-width: 900px) {
